# monocle

./: pyproject.toml
.github/workflows/: integration-tests-main.yml  integration-tests-mainv2.yml  integration-tests.yml  sendemail.yml
apptrace/: pyproject.toml
src/monocle_apptrace/: instrumentor.py  message_processing.py  span_handler.py  utils.py  wrap_common.py  wrapper.py
src/monocle_apptrace/exporters/: file_exporter.py
src/monocle_apptrace/instrumentation/common/: constants.py  instrumentor.py  span_handler.py  utils.py  wrapper.py  wrapper_method.py
src/monocle_apptrace/instrumentation/langchain/: __init__.py  langchain_methods.json
src/monocle_apptrace/instrumentation/langchain/metamodel/attributes/: attribute_util.py
src/monocle_apptrace/instrumentation/langchain/metamodel/attributes/config/: inference.py  retrieval.py
src/monocle_apptrace/instrumentation/metamodel/langchain/: _helper.py  inference.py  methods.py  workflow.py
src/monocle_apptrace/langchain/: langchain_methods.json
src/monocle_apptrace/langchain/metamodel/attributes/: attribute_util.py
src/monocle_apptrace/langchain/metamodel/attributes/config/: inference.py
src/monocle_apptrace/metamodel/maps/: swarm_methods.json
src/monocle_apptrace/metamodel/maps/attributes/inference/: swarm_entities.json
src/monocle_apptrace/swarm/: __init__.py
tests/: langchain_rag_l_to_m.py  metachain_sample_s3.py
tests/airline/: main.py
tests/integration/: test_bedrock_opensearch.py  test_gemini_finish_reason_integration.py  test_openai-rag_sample.py
tests/metamodel/metachain/: methods.py
tests/metamodel/metachain/entities/: inference.py
tests/weather_agent/: agents.py  run.py
