[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monocle_apptrace"
version = "0.5.3"
authors = [
  { name="Okahu Inc.", email="okahu-pypi@okahu.ai" },
]
description = "package with monocle genAI tracing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
   'requests',
   'wrapt==1.14.0',
   'opentelemetry-api',
   'opentelemetry-sdk',
   'opentelemetry-instrumentation',
   'mcp==1.12.1',
   'pydantic==2.11.7',
   'click==8.2.1'
]

[tool.pytest.ini_options]
#log_cli = true
#log_cli_level = "INFO"
# Enable file logging
log_file = "traces.log"
log_file_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(pathname)s:%(lineno)d %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

pythonpath = [
  "src",
  "tests"
]
markers = [
  "integration"
]

[project.optional-dependencies]
dev = [
  'langchain-openai',
  'langchain-chroma',
  'langchain-community',
  'langchain',
  'datasets',
  'numpy',
  'types-requests',
  'InstructorEmbedding',
  'sentence-transformers',
  'faiss-cpu',
  'pytest',
  'llama-index',
  'llama-index-llms-openai',
  'llama-index-tools-mcp',
  'llama-index-embeddings-huggingface',
  'llama-index-vector-stores-chroma',
  'parameterized',
  'llama-index-llms-mistralai',
  'langchain-mistralai',
  'mistral-haystack',
  'langchain-aws',
  'azure-storage-blob', # this is for blob exporter
  'boto3', # this is for aws exporter
  'llama-index-vector-stores-opensearch',
  'haystack-ai',
  'llama-index-llms-azure-openai',
  'requests-aws4auth',
  'opensearch-haystack',
  'langchainhub',
  'chromadb',
  'flask',
  'opentelemetry-instrumentation-flask',
  'langgraph',
  'langgraph-supervisor',
  'opendal',
  'anthropic',
  'anthropic-haystack',
  'pytest-asyncio',
  'llama-index-llms-anthropic',
  'langchain-anthropic',
  'langchain-mcp-adapters',
  'mcp',
  'a2a-sdk',
  'httpx',
  'fastapi',
  'pydantic',
  'uvicorn',
  'click',
  'python-dotenv',
  'langchain-google-genai',
  'google-adk',
  'google-generativeai',
  'openai-agents',
  'azure-ai-inference',
  'langfuse',
  'litellm',
  'google-ai-haystack',
  'llama-index-llms-gemini',
]

azure = [
    'azure-storage-blob==12.22.0',
]

aws = [
    'boto3==1.37.24',
]

[project.urls]
Homepage = "https://github.com/monocle2ai/monocle"
Issues = "https://github.com/monocle2ai/monocle/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/monocle_apptrace"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "pyproject.toml",
  "README.md",
  "LICENSE",
  "src/**",
]

[tool.hatch.build]
exclude = [
  "/.*",
  "*.txt",
  "Pipfile",
  "/data",
  "/docs",
  "/tests",
  "*.yml",
]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[project.scripts]
monocle_apptrace = "monocle_apptrace.mcp_server:main"